Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Jqmodal</h1>
-      <h2 class="project-tagline">[DISCONTINUED] jqModal is a plugin for jQuery to help you display notices, dialogs, and modal windows in a web browser. It is flexible and tiny, akin to a &quot;Swiss Army Knife&quot;, and makes a great base as a general purpose windowing framework.</h2>
+      <h2 class="project-tagline">[DISCONTINUED] jqModal is a plugin for jQuery to help you display notices, dialogs, and modal windows in a web browser.</h2>
       <a href="https://github.com/yoosuf/jqModal" class="btn">View on GitHub</a>
       <a href="https://github.com/yoosuf/jqModal/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/yoosuf/jqModal/tarball/master" class="btn">Download .tar.gz</a>
